# cuda-flash-attention

./: CMakeLists.txt  README.md  main.cu
include/: flash_attention.h  utils.h
src/: flash_attention.cu  flash_attention.h  main.cu  utils.cu
